--- a/week-007/week-07-class-03-lab/week-07-class-03-lab.ipynb
+++ b/week-007/week-07-class-03-lab/week-07-class-03-lab.ipynb
@@ -27,6 +27,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We go to README.md\n",
+    "\n",
+    "Hello all!\n",
+    "\n",
+    "This is a project that was made with the purpose of teaching you how to import custom modules.\n",
+    "\n",
+    "The notebook that will be due as submission is week-07-class-03-lab.ipynb. It has a bunch of errors because of the import statements! Can you fix these so that the notebook will run?\n",
+    "\n",
+    "The structure of this project is as such:\n",
+    "\n",
+    "There are four main files that hold different math operations: add_two_numbers.py, subtract_two_numbers.py, divide_two_numbers.py, and multiply_two_numbers.py. Within each file, there are functions created to operate on two different numbers passed in. We want to import these functions from our files to our main working script (week-07-class-03-lab.ipynb) in order to utilize them in our code.\n",
+    "\n",
+    "The python notebook obviously has errors in it. The bulk of the code will work fine as-is, as long as the import statements are corrected.\n",
+    "\n",
+    "Hint: make sure you keep an eye on the project structure, names of functions, and names of files. Not all files are in the same part of the directory tree!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Exercise 1\n",
     "\n",
     "Fix the following code so that the two numbers are added together using the add_two_numbers.py file:"
@@ -34,23 +55,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'add_two_numbers'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/06/hfzf9lp56zd43dhrhwknv5lh0000gn/T/ipykernel_23685/4094099063.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0madd_two_numbers\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Enter a number: \"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Enter another number: \"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'add_two_numbers'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0 + 4.0 = 5.0\n"
      ]
     }
    ],
    "source": [
-    "import add_two_numbers\n",
+    " from scripts.add_two_numbers import summing\n",
     "\n",
     "a = float(input(\"Enter a number: \", ))\n",
     "b = float(input(\"Enter another number: \", ))\n",
@@ -73,28 +90,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'multiplying' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/06/hfzf9lp56zd43dhrhwknv5lh0000gn/T/ipykernel_23685/2634050725.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Enter another number: \"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mthe_multiplication_of_two_numbers\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmultiplying\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'{a} + {b} = {the_multiplication_of_two_numbers}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'multiplying' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 + 4 = 12\n"
      ]
     }
    ],
    "source": [
-    "import multiply_two_numbers as axb\n",
+    "from scripts.one_more_folder.multiply_two_numbers import multiplying as axb\n",
     "\n",
     "a = int(input(\"Enter a number: \", ))\n",
     "b = int(input(\"Enter another number: \", ))\n",
     "\n",
-    "the_multiplication_of_two_numbers = multiplying(a,b)\n",
+    "the_multiplication_of_two_numbers = axb(a,b)\n",
     "\n",
     "print(f'{a} + {b} = {the_multiplication_of_two_numbers}')"
    ]
@@ -110,23 +123,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (580547711.py, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/var/folders/06/hfzf9lp56zd43dhrhwknv5lh0000gn/T/ipykernel_23685/580547711.py\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    from divide_two_numbers\u001b[0m\n\u001b[0m                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a:  2\n",
+      "This is b:  8\n",
+      "Result of addition:  10\n",
+      "Result of subtraction:  -6\n",
+      "Result of multiplication:  16\n",
+      "Result of division:  0.25\n"
      ]
     }
    ],
    "source": [
-    "from add_two_numbers import summing\n",
-    "import scripts.subtract_two_numbers\n",
-    "import multiplying\n",
-    "from divide_two_numbers\n",
+    "from scripts.add_two_numbers import summing\n",
+    "from scripts.subtract_two_numbers import subtracting\n",
+    "from scripts.one_more_folder.multiply_two_numbers import multiplying\n",
+    "from divide_two_numbers import dividing\n",
     "\n",
     "class Math_Operations:\n",
     "  def __init__(self, a, b):\n",
@@ -138,7 +155,7 @@
     "      return c\n",
     "\n",
     "  def subtract_something(self):\n",
-    "      d = s2n.subtracting(self.a,self.b)\n",
+    "      d = subtracting(self.a,self.b)\n",
     "      return d\n",
     "\n",
     "  def multiply_something(self):\n",
@@ -166,10 +183,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.5 64-bit",
+   "display_name": "Python 3.8.9 64-bit",
    "name": "python3"
   },
   "language_info": {
@@ -182,7 +199,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.9"
   },
   "orig_nbformat": 4
  },
