'week8 lab ver1'

--- a/week-008/week_08_class_01_lab.ipynb
+++ b/week-008/week_08_class_01_lab.ipynb
@@ -1,30 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "kernelspec": {
-      "display_name": "Python 3",
-      "language": "python",
-      "name": "python3"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.7.4"
-    },
-    "colab": {
-      "name": "week-08-class-01-lab.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -55,6 +29,13 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "read() function is a method that reads all the data in the file. It is important to read and also pass in the number of characters we want to read. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "KV1pFuS8FH7e"
       },
@@ -66,6 +47,27 @@
         "Open the txt file in Visual Studio Code using read() .\n",
         "\n",
         "Insert that screenshot below showing you were successful:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "It's time to read in python!\n"
+          ]
+        }
+      ],
+      "source": [
+        "\n",
+        "\n",
+        "F1 = open(\"reading_python.txt\", \"r\")\n",
+        "rd1 = F1.read()\n",
+        "print(rd1)"
       ]
     },
     {
@@ -81,15 +83,33 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "GaJ9r_AO7ANd"
-      },
+      "cell_type": "markdown",
+      "metadata": {},
       "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
+        "import webbrowser\n",
+        "\n",
+        "var1 = open(\"file_hello_world.html\", \"w\")\n",
+        "\n",
+        "file_content = '''\n",
+        "\n",
+        "<html>\n",
+        "<head></head>\n",
+        "<body>\n",
+        "<p> \n",
+        "<h1>\n",
+        "Hello World!\n",
+        "</h1>\n",
+        " </p>\n",
+        "<style>\n",
+        "img {\n",
+        "  width: 50%;\n",
+        "  height: auto;\n",
+        "}\n",
+        "</style>\n",
+        "<img src=\"https://img5.goodfon.com/original/2000x1400/9/4f/ozero-iaponiia-listia-osen-gora-fudzi.jpg\" alt=\"Italian Trulli\">\n",
+        "</body>\n",
+        "</html>"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -106,6 +126,47 @@
         "\n",
         "\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "The 6 modes used when openning a function are as follows: \n",
+        "    \"r\" = Read - is used to open a file for reading. It will return error if the function does not exist. \n",
+        "    \"a\" = Append - is used to open a file for appending. It will create a file if file does not exist.\n",
+        "    \"w\" = Write - is used to open a file for writing. It will create a file if file does not exist.\n",
+        "    \"x\" = Create - is used to create the specified file. It will return error if the file exists. \n",
+        "    \"t\" = Text - is a default value for text. \n",
+        "    \"b\" = Binary - is used for images.  \n"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "collapsed_sections": [],
+      "name": "week-08-class-01-lab.ipynb",
+      "provenance": []
+    },
+    "interpreter": {
+      "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    },
+    "kernelspec": {
+      "display_name": "Python 3.8.9 64-bit",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.8.9"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
