--- a/week-007/week-07-homework.ipynb
+++ b/week-007/week-07-homework.ipynb
@@ -41,7 +41,7 @@
     "\n",
     "var1 = open(\"image.html\", \"w\")\n",
     "\n",
-    "file_content = '''\n",
+    "file_content1 = '''\n",
     "\n",
     "<html>\n",
     "<head></head>\n",
@@ -61,7 +61,44 @@
     "\n",
     "'''\n",
     "\n",
-    "var1.write(file_content)\n",
+    "var1.write(file_content1)\n",
+    "\n",
+    "var1.close()\n",
+    "\n",
+    "webbrowser.open_new_tab(\"image.html\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import webbrowser\n",
+    "\n",
+    "var1 = open(\"image.html\", \"w\")\n",
+    "\n",
+    "file_content = '''\n",
+    "\n",
+    "<html>\n",
+    "<head></head>\n",
+    "<body>\n",
+    "<p> \n",
+    "\n",
+    "</p>\n",
+    "<style>\n",
+    "img {\n",
+    "  width: 50%;\n",
+    "  height: auto;\n",
+    "}\n",
+    "</style>\n",
+    "<img src=\"/Users/hiwot-w/Desktop/Data_Science_Course/hiw-DS2022/DS2022-1/week-007/Screen Shot 2021-11-01 at 10.59.40 AM.png\" alt=\"Italian Trulli\">\n",
+    "</body>\n",
+    "</html>\n",
+    "\n",
+    "'''\n",
+    "\n",
+    "var1.write(file_content1)\n",
     "\n",
     "var1.close()\n",
     "\n",
@@ -128,9 +165,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3.8.9 64-bit",
    "name": "python3"
   },
   "language_info": {
@@ -143,7 +182,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.9"
   }
  },
  "nbformat": 4,
