--- a/week-007/week-07-homework.ipynb
+++ b/week-007/week-07-homework.ipynb
@@ -55,7 +55,7 @@
     "  height: auto;\n",
     "}\n",
     "</style>\n",
-    "<img src=\"/Users/hiwot-w/Desktop/Data_Science_Course/hiw-DS2022/DS2022-1/week-007/Screen Shot 2021-11-01 at 10.59.40 AM.png\" alt=\"Italian Trulli\">\n",
+    "<img src=\"https://github.com/hiwett18/DS2022/blob/main/week-007/Screen%20Shot%202021-11-01%20at%2010.59.40%20AM.png\" alt=\"Italian Trulli\">\n",
     "</body>\n",
     "</html>\n",
     "\n",
