--- a/week-008/week-08-lab-02.ipynb
+++ b/week-008/week-08-lab-02.ipynb
@@ -28,6 +28,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Person:\n",
+    "    def __init__(self):\n",
+    "        self.x = 5\n",
+    "\n",
+    "person1 = Person()\n",
+    "person1.x"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -50,6 +75,60 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jane Doe\n",
+      "[95]\n",
+      "[95, 100]\n",
+      "[95, 100, 85]\n",
+      "All homework grades = [95, 100, 85]\n",
+      "Average =  93.33\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Student:\n",
+    "    def __init__(self, first_name, last_name, age, hw_grades):\n",
+    "        self.first_name = first_name\n",
+    "        self.last_name = last_name\n",
+    "        self.age = age\n",
+    "        self.hw_grades = []\n",
+    "    \n",
+    "    def full_name(self):\n",
+    "        print(self.first_name, self.last_name)\n",
+    "    \n",
+    "    def grades(self, y):\n",
+    "        self.hw_grades.append(y)\n",
+    "        return self.hw_grades\n",
+    "    \n",
+    "    def average(self):\n",
+    "        sum = 0 \n",
+    "        for i in self.hw_grades:\n",
+    "            sum += i\n",
+    "        a = sum / len(self.hw_grades)\n",
+    "        avg = round(a, 2)\n",
+    "        return avg\n",
+    "\n",
+    "\n",
+    "\n",
+    "s1 = Student(\"Jane\", \"Doe\", 21, 79)\n",
+    "s1.full_name()\n",
+    "print(s1.grades(95))\n",
+    "print(s1.grades(100))\n",
+    "print(s1.grades(85))\n",
+    "s1.hw_grades\n",
+    "s1.average()\n",
+    "print (f\"All homework grades = {s1.hw_grades}\")\n",
+    "print(\"Average = \", s1.average())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -57,6 +136,44 @@
     "Create a class called `Square` that overloads the addition operator by adding the area of two squares. You will need at least an attribute for length, a method for calculating area and the overloaded + operator method.\n",
     "\n",
     "e.g. Square(3) + Square(4) == 25"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n",
+      "16\n",
+      "25\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Square:\n",
+    "    def __init__(self, length):\n",
+    "        self.length = length\n",
+    "        self.area = self.length**2\n",
+    "\n",
+    "    def square_area(self):\n",
+    "        return self.area\n",
+    "\n",
+    "    def __add__(self, other):\n",
+    "        x = self.area + other.area \n",
+    "        return x\n",
+    "    \n",
+    "\n",
+    "\n",
+    "\n",
+    "a1 = Square(3)\n",
+    "a2 = Square(4)\n",
+    "print(a1.square_area())\n",
+    "print(a2.square_area())\n",
+    "print(a1 + a2)\n"
    ]
   },
   {
@@ -76,12 +193,64 @@
     "\n",
     "When you're finished, create an instance of Store and demonstrate that your methods/code work. Bonus points for addtional methods/functionality."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Added to inventory: {'apple': 20}\n",
+      "Added to inventory: {'apple': 20, 'orange': 25}\n",
+      " 3 oranges were bought. Current inventory is {'apple': 20, 'orange': 22}\n",
+      " 5 apples were bought. Current inventory is {'apple': 15, 'orange': 22}\n",
+      "Added to inventory: {'apple': 15, 'orange': 22, 'pineapple': 40}\n",
+      "Added to inventory: {'apple': 15, 'orange': 22, 'pineapple': 40, 'banana': 35}\n",
+      "Available products for sale: {'apple': 15, 'orange': 22, 'pineapple': 40, 'banana': 35}\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Store: \n",
+    "    def __init__(self, inventory):\n",
+    "        self.inventory = {}\n",
+    "\n",
+    "    def add(self, items, amount):\n",
+    "        self.inventory[items] = amount\n",
+    "        return f\"Added to inventory: {self.inventory}\"\n",
+    "    \n",
+    "    def buy(self, items, purchased):\n",
+    "        self.inventory[items] -= purchased\n",
+    "        return f\" {purchased} {items}s were bought. Current inventory is {self.inventory}\"\n",
+    "    \n",
+    "    def products_for_sale(self):\n",
+    "        return self.inventory\n",
+    "\n",
+    "a1 = Store(0)\n",
+    "\n",
+    "print(a1.add(\"apple\", 20))\n",
+    "print(a1.add(\"orange\", 25))\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "print(a1.buy(\"orange\", 3))\n",
+    "print(a1.buy(\"apple\", 5))\n",
+    "print(a1.add(\"pineapple\", 40))\n",
+    "print(a1.add(\"banana\", 35))\n",
+    "print(\"Available products for sale:\", a1.products_for_sale())\n"
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3.10.0 64-bit",
    "name": "python3"
   },
   "language_info": {
@@ -94,7 +263,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
