--- a/week-009/Week-09-lab-002.ipynb
+++ b/week-009/Week-09-lab-002.ipynb
@@ -27,7 +27,16 @@
     "https://www.simplilearn.com/tutorials/mysql-tutorial/mysql-workbench-installation\n",
     "\n",
     "Submit a screenshot of mySQL workbench connected to your mySQL instance below:\n",
+    "\n",
+    "<img src: '/Users/hiwot-w/Desktop/MySQL_Workbench_and_instance.png'>\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src: '/Users/hiwot-w/Desktop/MySQL_Workbench_and_instance.png'>"
    ]
   },
   {
@@ -40,7 +49,17 @@
     "\n",
     "https://stackoverflow.com/questions/51765589/how-do-i-install-the-sakila-database-into-mysql-workbench-on-a-mac\n",
     "\n",
-    "Submit screenshot below:"
+    "Submit screenshot below:\n",
+    "\n",
+    "<img src: '/Users/hiwot-w/Desktop/sakila-db.png'>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "<img src: '/Users/hiwot-w/Desktop/sakila-db.png'>\n"
    ]
   },
   {
@@ -50,6 +69,14 @@
     "# Exercise 3\n",
     "\n",
     "Submit screenshot of your ER Diagram below. Reminder - it should contain at least 5 entities (tables), each table should have attributes, and there should be defined relationships between the tables. You can either use the correct endpoints to define the relationships or you can use text boxes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "/Users/hiwot-w/Desktop/ERD.png\n",
+    "<img src: '/Users/hiwot-w/Desktop/ERD.png'>\n"
    ]
   }
  ],
