--- a/week-010/week-10-class-01-lab.ipynb
+++ b/week-010/week-10-class-01-lab.ipynb
@@ -1,19 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "MongoDB Atlas Lab",
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -44,6 +29,15 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "filter: {\"founded_year\": 2005}\n",
+        "project: {\"name\":1, \"founded_month\":1, \"founded_day\":1, \"founded_year\":1, \"_id\":0}\n",
+        "sort: {\"name\": 1}"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "4-rdl2ywibz8"
       },
@@ -58,6 +52,21 @@
       },
       "source": [
         "I used to go to a restaurant in Brooklyn that had Chinese cuisine. It has the word \"Noodles\" in its name and a number. What's the number? "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "{'borough':\"Brooklyn\",'cuisine':\"Chinese\", 'name':{\"$regex\":\"Noodles\"}}\n",
+        "\n",
+        "_id:5eb3d668b31de5d588f448d9\n",
+        "address:Object\n",
+        "borough:\"Brooklyn\"\n",
+        "cuisine:\"Chinese\"\n",
+        "grades:Array\n",
+        "name:\"86 Noodles\"\n",
+        "restaurant_id:\"41309521\""
       ]
     },
     {
@@ -80,6 +89,17 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "\n",
+        "filter: {\"house_rules\": {\"$regex\": \"no smoking\"}, \"bedrooms\": 6, \"beds\": 6}\n",
+        "project: {\"listing_url\": 1}\n",
+        "\n",
+        "listing_url:\"https://www.airbnb.com/rooms/17301277\""
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "fuRmJLKuinJl"
       },
@@ -94,6 +114,15 @@
       },
       "source": [
         "In the sample_training database, look through the 'zips' collection. Which zip code has the highest population? "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "sort : {\"pop\": -1}\n",
+        "\n",
+        "zip:\"60623\"\n"
       ]
     },
     {
@@ -113,6 +142,31 @@
       "source": [
         " I remember seeing a poster for a 'SpongeBob' movie that had multiple SpongeBob characters. Look through the 'movies' collection in the 'sample_mflix\" database and name all the characters in that poster. "
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "{'plot':{'$regex':'SpongeBob'}}\n",
+        "Sandy, SpongeBob, Squidward, Mr. Krab, Patric\n",
+        "\n",
+        "https://m.media-amazon.com/images/M/MV5BMjYyNDczNTE0MF5BMl5BanBnXkFtZTgwNjkzNDYxMzE@._V1_SY1000_SX677_AL_.jpg"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "name": "MongoDB Atlas Lab",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
